added javascript section and projects

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
+    <script src="./Scripts/main.js" defer></script>
 </head>
 
 <body id="home">
@@ -86,12 +87,9 @@
     </section>
 
     <section id="projects" class="project_section">
-        <h2 class="project_header josefin-bold">My Projects</h2>
+        <h2 class="project_header josefin-bold">HtML & CSS Projects</h2>
 
         <div class="project_card_area">
-
-
-
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/Coffee.png" alt="coffee mug" class="cardimg"></div>
                 <div class="project_card_text">
@@ -196,6 +194,94 @@
         </div>
     </section>
 
+
+    <section id="projects" class="project_section">
+        <h2 class="project_header josefin-bold">Javascript Projects</h2>
+
+    <div class="project_card_area">
+        <div class="project_card">
+            <div class="project_card_img"><img src="" alt="" class="cardimg"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Math Game</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./projects/Math Game/index.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img"><img src="" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Page Builder</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./projects/Page Builder/index.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img"><img src="" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Country Data</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./projects/Country Data/index.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img"><img src="" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Memory Game</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/package.jpg" alt="delivery truck" class="cardimg">
+            </div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Javascript</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/handshake.jpg" alt="handshake"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Javascripte</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/basketball.jpg" alt="basketball hoop"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Javascript</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card" id="project_card3">
+            <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Javascript</h3>
+                <p class="project_blurb josefin-light"Paragraph</p>
+                <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt="bitcoin logo"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title oxanium-600">Javascript</h3>
+                <p class="project_blurb josefin-light">Paragraph</p>
+                <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
+    </div>
+</section>
     <section id="contact_section">
         <div class="contact_container">
             <h2 class="josefin-bold mt-3">Contact Me</h2>
