added project folders

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Math Game</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Math Game/index.html">Project Page</a></button>
+                <button class="btn_styling"><a href="./projects/Javascript Projects/Math Game/index.html">Project Page</a></button>
             </div>
         </div>
 
@@ -213,7 +213,7 @@
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Page Builder</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Page Builder/index.html">Project Page</a></button>
+                <button class="btn_styling"><a href="./projects//Javascript Projects/Page Builder/index.html">Project Page</a></button>
             </div>
         </div>
 
@@ -222,21 +222,21 @@
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Country Data</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Country Data/index.html">Project Page</a></button>
+                <button class="btn_styling"><a href="./projects/Javascript Projects/Country Data/index.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
             <div class="project_card_img"><img src="" alt=""></div>
             <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Memory Game</h3>
+                <h3 class="project_card_title oxanium-600">World Clocks</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="">Project Page</a></button>
+                <button class="btn_styling"><a href="./projects/Javascript Projects/World Clock/index.html/index.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/package.jpg" alt="delivery truck" class="cardimg">
+            <div class="project_card_img"><img src="" alt="delivery truck" class="cardimg">
             </div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Javascript</h3>
@@ -246,7 +246,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/handshake.jpg" alt="handshake"></div>
+            <div class="project_card_img"><img src="" alt="handshake"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Javascripte</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
@@ -255,7 +255,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="./images/basketball.jpg" alt="basketball hoop"></div>
+            <div class="project_card_img"><img src="" alt="basketball hoop"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Javascript</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
@@ -264,7 +264,7 @@
         </div>
 
         <div class="project_card" id="project_card3">
-            <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
+            <div class="project_card_img"><img src="" alt="tiger" class="cardimg"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Javascript</h3>
                 <p class="project_blurb josefin-light"Paragraph</p>
@@ -273,7 +273,7 @@
         </div>
 
         <div class="project_card">
-            <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt="bitcoin logo"></div>
+            <div class="project_card_img cardimg"><img src="" alt="bitcoin logo"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Javascript</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
