--- a/projects/Javascript Projects/Country Data/index.html
+++ b/projects/Javascript Projects/Country Data/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
        <!-- Other styles -->
     <link rel="stylesheet" href="./main.css">
     <script src="./script.js" type="module"></script>
@@ -38,7 +39,7 @@
         
     
 
-    <div id="popup" class="hidden">
+    <div id="popupDiv" class="hidden">
         <h1 id="name"></h1>
         <p id="population"></p>
         <p id="capital"></p>
