--- a/projects/Javascript Projects/Country Data/index.html
+++ b/projects/Javascript Projects/Country Data/index.html
@@ -27,6 +27,7 @@
         <div>
             <h5 class="text-white mt-2">Search by continent</h5>
             <select name="continent" id="continent" class="form-control ">
+                <option value="blank">Select An Option</option>
                 <option value="all">All</option>
                 <option value="africa">Africa</option>
                 <option value="north america">North America</option>
