--- a/projects/Javascript Projects/TicTacToe/index.html
+++ b/projects/Javascript Projects/TicTacToe/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
        <!-- Other styles -->
     <link rel="stylesheet" href="./main.css">
-    <script src="./script.js" type="module"></script>
+    <script src="./script.js" type="module" defer></script>
 </head>
 
 <body style="background-color: rgb(69, 69, 69);">
