--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <div class="navbar-nav ms-auto text-center">
                         <a class="nav-link" href="#home">Home</a>
                         <a class="nav-link" href="#aboutMe_section">About Me</a>
-                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="#htmlProjects">HTML Projects</a>
+                        <a class="nav-link" href="#jsProjects">Javascript Projects</a>
                         <a class="nav-link" href="#contact_section">Contact</a>
                     </div>
                 </div>
@@ -86,7 +87,7 @@
         </div>
     </section>
 
-    <section id="projects" class="project_section">
+    <section id="htmlProjects" class="project_section">
         <h2 class="project_header josefin-bold">HtML & CSS Projects</h2>
 
         <div class="project_card_area">
@@ -195,7 +196,7 @@
     </section>
 
 
-    <section id="projects" class="project_section">
+    <section id="jsProjects" class="project_section">
         <h2 class="project_header josefin-bold">Javascript Projects</h2>
 
     <div class="project_card_area">
@@ -239,16 +240,16 @@
             <div class="project_card_img"><img src="" alt="delivery truck" class="cardimg">
             </div>
             <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Javascript</h3>
+                <h3 class="project_card_title oxanium-600">Tic Tac Toe</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
+                <button class="btn_styling"><a href="./projects/Javascript Projects/TicTacToe/index.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
             <div class="project_card_img"><img src="" alt="handshake"></div>
             <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Javascripte</h3>
+                <h3 class="project_card_title oxanium-600">Javascript</h3>
                 <p class="project_blurb josefin-light">Paragraph</p>
                 <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
             </div>
