--- a/projects/Javascript Projects/TicTacToe/index.html
+++ b/projects/Javascript Projects/TicTacToe/index.html
@@ -13,8 +13,9 @@
     <script src="./script.js" type="module" defer></script>
 </head>
 
-<body style="background-color: rgb(69, 69, 69);">
+<body class="d-flex flex-column align-items-center" style="background-color: rgb(20, 44, 37);">
     <div id="gameContainer"></div>
+    <button class="playAgain" id="restart">Play Again</button>
     
     
 
