block func and tie

--- a/projects/Javascript Projects/TicTacToe/index.html
+++ b/projects/Javascript Projects/TicTacToe/index.html
@@ -22,6 +22,7 @@
         <div id="winCounters">
             <h2 class="xWins">Wins by X: 0</h2>
             <h2 class="oWins">Wins by O: 0</h2>
+            <h2 class="ties">Ties: 0</h2>
         </div>
         <button class="playAgain" id="restart">Play Again</button>
     </div>
