--- a/projects/Javascript Projects/User Login/index.html
+++ b/projects/Javascript Projects/User Login/index.html
@@ -8,30 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="register">
-        <h1>Register</h1>
-        <form class="form">
-            <label for="firstname">First Name<span class="asterisk">*</span></label>
-            <input type="text" id="firstname" name="firstname" required>
-
-            <label for="lastname">Last Name<span class="asterisk">*</span></label>
-            <input type="text" id="lastname" name="lastname" required>
-
-            <label for="email">Email<span class="asterisk">*</span></label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="username">Username<span class="asterisk">*</span></label>
-            <input type="text" id="regUsername" name="username" required>
-            <p class="usernameNote">This cannot be changed later.</p>
-
-            <label for="password">Password<span class="asterisk">*</span></label>
-            <input type="password" id="regPassword" name="password" required>
-
-            <button type="submit" id="register" disabled>Register</button>
-        </form>
-
-        <p>Already have an account? <a href="./login.html">Log In</a></p>
-
+    <div class="landing">
+        <h2>Welcome</h2>
+        <a href="./register.html"><button>Make An Account</button></a>
+        <a href="./login.html"><button>Log In</button></a>
     </div>
     
     
