--- a/projects/Javascript Projects/User Login/register.html
+++ b/projects/Javascript Projects/User Login/register.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Login</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+
     <script src="./scripts/auth.js" defer></script>
     <link rel="stylesheet" href="./style.css">
+    
+
 </head>
 <body>
     <div class="register">
