calendar update and homepage

--- a/index.html
+++ b/index.html
@@ -201,86 +201,70 @@
 
     <div class="project_card_area">
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt="" class="cardimg"></div>
+            <div class="project_card_img"><img src="./images/math_game.jpg" alt="equations" class="cardimg"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Math Game</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Javascript Projects/Math Game/index.html">Project Page</a></button>
+                <p class="project_blurb josefin-light">A multi-leveled math problem generator to test your skills. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/mathGame_page.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt=""></div>
+            <div class="project_card_img"><img src="./images/webpage.jpg" alt="webpage"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Page Builder</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects//Javascript Projects/Page Builder/index.html">Project Page</a></button>
+                <p class="project_blurb josefin-light">An interface for quickly mocking up simple webpages in realtime. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/pageBuilder_page.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt=""></div>
+            <div class="project_card_img"><img src="./images/globe.jpg" alt="globe"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Country Data</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Javascript Projects/Country Data/index.html">Project Page</a></button>
+                <p class="project_blurb josefin-light">A searchable and sortable database for country data. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/countryData_page.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt=""></div>
+            <div class="project_card_img"><img src="./images/clocks.jpg" alt="clocks"></div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">World Clocks</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Javascript Projects/World Clock/index.html/index.html">Project Page</a></button>
+                <p class="project_blurb josefin-light">A simple display of multiple timezones from around the world, including their weather. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/worldClocks_page.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt="delivery truck" class="cardimg">
+            <div class="project_card_img"><img src="./images/tictactoe.jpg" alt="tic TicTacToe" class="cardimg">
             </div>
             <div class="project_card_text">
                 <h3 class="project_card_title oxanium-600">Tic Tac Toe</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./projects/Javascript Projects/TicTacToe/index.html">Project Page</a></button>
+                <p class="project_blurb josefin-light">A Player vs Computer tic tac toe game with scorekeeping. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/ticTacToe_page.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt="handshake"></div>
+            <div class="project_card_img"><img src="./images/calendar.jpg" alt="calendar"></div>
             <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Javascript</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
+                <h3 class="project_card_title oxanium-600">Calendar Account</h3>
+                <p class="project_blurb josefin-light">A user account system with registration, login, admin access and management. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/calendarAccount_page.html">Project Page</a></button>
             </div>
         </div>
 
         <div class="project_card">
-            <div class="project_card_img"><img src="" alt="basketball hoop"></div>
+            <div class="project_card_img"><img src="./images/cards.jpg" alt="cards"></div>
             <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Javascript</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
+                <h3 class="project_card_title oxanium-600">Memory Game</h3>
+                <p class="project_blurb josefin-light">A grid pattern matching memory game with adjustable difficulty. Built using HTML, CSS, & Javascript.</p>
+                <button class="btn_styling"><a href="./html/Javascript_projectPages/memoryGame_page.html">Project Page</a></button>
             </div>
         </div>
 
-        <div class="project_card" id="project_card3">
-            <div class="project_card_img"><img src="" alt="tiger" class="cardimg"></div>
-            <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Javascript</h3>
-                <p class="project_blurb josefin-light"Paragraph</p>
-                <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
-            </div>
-        </div>
-
-        <div class="project_card">
-            <div class="project_card_img cardimg"><img src="" alt="bitcoin logo"></div>
-            <div class="project_card_text">
-                <h3 class="project_card_title oxanium-600">Javascript</h3>
-                <p class="project_blurb josefin-light">Paragraph</p>
-                <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
-            </div>
-        </div>
+        
     </div>
 </section>
     <section id="contact_section">
