--- a/projects/Javascript Projects/User Login/register.html
+++ b/projects/Javascript Projects/User Login/register.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Login</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+    <script src="./scripts/app.js" type="module" defer></script>
+    <script src="./scripts/register.js" type="module" defer></script>
+    
 
-    <script src="./scripts/auth.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     
 
@@ -14,7 +16,7 @@
 <body>
     <div class="register">
         <h1>Register</h1>
-        <form class="form">
+        <form class="registerForm">
             <label for="firstname">First Name<span class="asterisk">*</span></label>
             <input type="text" id="firstname" name="firstname" required>
 
@@ -25,14 +27,14 @@
             <input type="email" id="email" name="email" required>
 
             <label for="username">Username<span class="asterisk">*</span></label>
-            <input type="text" id="regUsername" name="username" required>
+            <input type="text" id="username" name="username" required>
             <p class="usernameNote">This cannot be changed later.</p>
 
             <label for="password">Password<span class="asterisk">*</span></label>
-            <input type="password" id="regPassword" name="password" required>
+            <input type="password" id="password" name="password" required>
             <p class="passwordNote">Password must be at least 8 characters, contain one uppercase letter, one lowercase letter, and one number.</p>
 
-            <button type="submit" id="register" disabled>Register</button>
+            <button type="submit" id="register-btn" disabled>Register</button>
         </form>
 
         <p>Already have an account? <a href="./login.html">Log In</a></p>
