tweaks and responsivness

--- a/projects/Javascript Projects/Country Data/index.html
+++ b/projects/Javascript Projects/Country Data/index.html
@@ -19,15 +19,14 @@
     <div id="header" class="d-flex flex-column align-items-center justify-content-center gap-2">
         <h1>Country Data</h1>
 
-        <div>
+        <div class="sort">
             <h5 class="text-white mt-2">Search by country</h5>
             <input type="text" id="search" class="form-control" placeholder="Enter a country">
         </div> 
 
-        <div>
+        <div class="sort">
             <h5 class="text-white mt-2">Search by continent</h5>
             <select name="continent" id="continent" class="form-control ">
-                <option value="blank">Select An Option</option>
                 <option value="all">All</option>
                 <option value="africa">Africa</option>
                 <option value="north america">North America</option>
