--- a/projects/Javascript Projects/Math Game/index.html
+++ b/projects/Javascript Projects/Math Game/index.html
@@ -16,7 +16,7 @@
         <h3>Get 10 questions right before your lives run out!</h3>
         <div id="dropdowns">
             <div id="difficultyDropdown">
-                <label for="diffSelect">Choose A Difficulty Level</label>
+                <label for="diffSelect">Choose A Difficulty</label>
                 <select name="difficulty" id="diffSelect">
                     <option value="">Select An Option</option>
                     <option value="easy">Easy</option>
