--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simcha Lapp Portfolio</title>
-    <script src="./main.js" defer></script>
+    <script src="./Scripts/contactForm.js" defer></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -271,25 +271,32 @@
     <section id="contact_section">
         <div class="contact_container">
             <h2 class="josefin-bold mt-3">Contact Me</h2>
-            <form id="contact_form" class="contact_form josefin-light">
-                <div class="contact_field ">
-                    <input type="text" placeholder="Name" class="contact_input" id="full-name" name="full-name">
+            <form id="contact_form" class="contact_form josefin-light flex-column">
+                <div class="contact_field">
+                    <label for="name">Name:</label>
+                    <input type="text" placeholder="John Doe" class="contact_input" id="fullname" name="name">
+                    <span class="info-icon" data-toggle="tooltip" data-placement="right" title="Please enter your full name, including first and last names."><i class="Tooltip fas fa-info-circle" id="fullnameTooltip"></i></span>
                 </div>
 
                 <div class="contact_field">
-                    <input type="tel" placeholder="Phone Number" class="contact_input" name="tel" id="tel">
+                    <label for="email">Email:</label>
+                    <input type="text" placeholder="johndoe@email.com" class="contact_input" name="email" id="email">
+                    <p id="emailError"></p>
+                    <span class="info-icon" data-toggle="tooltip" data-placement="right" title="Please enter a valid email address."><i class="Tooltip fas fa-info-circle" id="emailTooltip"></i></span>
                 </div>
 
                 <div class="contact_field">
-                    <input type="email" placeholder="Email" class="contact_input" name="email" id="email">
+                    <label for="phone">Phone (optional):</label>
+                    <input type="tel" placeholder="123-456-7890" class="contact_input" name="phone" id="phone">
+                    <p id="phoneError"></p>
+                    <span class="info-icon" data-toggle="tooltip" data-placement="right" title="Please enter a valid phone number."><i class="Tooltip fas fa-info-circle" id="phoneTooltip"></i></span>
                 </div>
-
-                <div class="contact_field message_container">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" cols="50" rows="5"></textarea>
+            
+                <div class="contact_field message_container flex-column">
+                    <label for="message">Message <span class="info-icon" data-toggle="tooltip" data-placement="right" title="Please enter a minumum of 10 characters and a maximum of 500 characters."><i class="Tooltip fas fa-info-circle" id="messageTooltip"></i></span> </label>
+                    <textarea name="message" id="message" rows="4"></textarea>
                 </div>
                 <input type="submit" class="form_submit btn_styling" name="submit" value="Submit"></input>
-
             </form>
         </div>
     </section>
