--- a/projects/Javascript Projects/Mikvah Calendar/index.html
+++ b/projects/Javascript Projects/Mikvah Calendar/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mikvah Calendar</title>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
-    <script src="./scripts/account.js" defer></script>
-    <link rel="stylesheet" href="./style.css">
+    <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
     <form action="">
         <label for="machzorDate">Machzor</label>
